--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <EditText
+        android:id="@+id/nameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/input_field"
@@ -150,6 +151,8 @@
     </RelativeLayout>
 
     <Button
+        android:id="@+id/addToCartButton"
+        android:onClick="addToCardButtonHandler"
         android:layout_gravity="end"
         android:layout_width="match_parent"
         android:layout_height="69dp"
